--- a/index.html
+++ b/index.html
@@ -1,11 +1,173 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>DeLorean DMC-12</title>
         <link rel="stylesheet" href="index.css">
+        <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet" 
+        type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" 
+        type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" 
+        type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!-- Здесь применять вашу самую сильную магию -->
+        <header>
+            <p>
+                <img class="header" src="http://news.bbcimg.co.uk/img/1_0_3/cream/hi/news/news-blocks.gif" 
+                alt="BBC">
+            </p>
+        </header>
+        <main>
+            <article>
+                <h1>&laquo;Tractor beam&raquo; grabs beads with sound waves</h1>
+                <div lang="en" class="page">
+                    <p>
+                        En&shy;gi&shy;neers in Bristol have de&shy;ve&shy;loped a system that can grab, hold
+                         and move small objects without touching them, using &laquo;holograms&raquo; made of 
+                        sound waves.
+                    </p>
+                    <p>
+                        It offers the kind of re&shy;mote cont&shy;rol that na&shy;tu&shy;rally draws 
+                        com&shy;pari&shy;son with the &laquo;tractor beams&raquo; of science fiction.
+                    </p>
+                    <p>
+                        So far the team has tes&shy;ted the design on small pea-sized objects, which they can
+                         ma&shy;ni&shy;pu&shy;late from 30-40cm away.
+                    </p>
+                    <p>
+                        Writing in Nature Communications, they sug&shy;gest the work could help 
+                        de&shy;ve&shy;lop remote sur&shy;gical instru&shy;ments.
+                    </p>
+                    <p>
+                        In essence, an object sit&shy;ting in a &laquo;quiet&raquo; region of space can be 
+                        held there if it is sur&shy;rounded by very high-intensity sound waves. As the 
+                        pat&shy;tern of that boun&shy;dary shifts, the object can be moved around.
+                    </p>
+                    <p>
+                        The researchers prog&shy;ram&shy;med a grid of small spea&shy;kers to emit 
+                        ultra&shy;sound in in&shy;tri&shy;cate, shif&shy;ting pat&shy;terns, craf&shy;ting 
+                        shapes from the in&shy;te&shy;rac&shy;ting waves that resem&shy;bled twee&shy;zers, 
+                        bot&shy;tles, and tiny tornado-like twis&shy;ters.
+                    </p>
+                    <p>
+                        These &laquo;holograms&raquo; were able to con&shy;trol small beads up to 5mm 
+                        across. Crucially, the design works from just one side - in&shy;clu&shy;ding above 
+                        or below the beads - in&shy;stead of re&shy;quiring the object to be sur&shy;rounded by 
+                        loud&shy;speakers.
+                    </p>
+                    <div class="notab">
+                        <h2>Non-contact manufacturing?</h2>
+                        <p>
+                            Prof Bruce Drinkwater from the University of Bristol, one of the study's 
+                            authors, said the holy grail in this field is to use this sort of 
+                            ma&shy;ni&shy;pu&shy;lation in, for example, tar&shy;geted drug deli&shy;very.
+                        </p>
+                    </div>
+                    <p>
+                        &laquo;Our method, we hope, will now be ap&shy;plied, both at a smal&shy;ler 
+                        scale - maybe for medical pur&shy;poses - and at a larger scale, poten&shy;tially 
+                        for hand&shy;ling dan&shy;gerous materials in some sort of non-contact production 
+                        line.&raquo;
+                    </p>
+                    <figure>
+                        <img src="images\photo.jpg" alt="Hologram" title="Invisible 'hologram'">
+                        <figcaption>
+                            A grid of programmable speakers creates invisible "hologram" shapes from 
+                            ultrasound waves
+                        </figcaption>
+                    </figure>
+                    <p>
+                        Similar re&shy;search from the University of Dundee, pub&shy;lished last year, had 
+                        already demon&shy;strated that sound waves could tug an object towards a sound 
+                        source. Prof Drinkwater said that work was what first ins&shy;pired his own team's 
+                        efforts.
+                    </p>
+                    <p>
+                        &laquo;That was the star&shy;ting point for us thin&shy;king, actually, this could 
+                        be pos&shy;sible,&raquo; he told the BBC. &laquo;They showed that the force existed 
+                        and they measured it expe&shy;ri&shy;men&shy;tally - but they didn't hold anything 
+                        stably.&raquo;
+                    </p>
+                    <blockquote class="notab">
+                        &laquo;Our mission, as it were, was to try and take that and make it into a 
+                        stable, working tractor beam, that could actually hold objects and move and 
+                        manipulate them&raquo;
+                    </blockquote>
+                    <p>
+                        One of the authors of the 2014 Dundee study, Dr Mike MacDonald, said the work from 
+                        Bristol was "a very nice demon&shy;stration" of the power of this tech&shy;nology.
+                    </p>
+                    <figure>
+                        <img src="images\hand.jpg" alt="Drugs delivery" title="Drugs delivery">
+                        <figcaption>
+                            The Bristol engi&shy;neers say their tech could even&shy;tually help deliver 
+                            drugs in a targeted way.
+                        </figcaption>
+                    </figure>
+                    <p>
+                        The main dif&shy;ference between their work, he ex&shy;plained, was that 
+                        the Bristol team had built their own speaker system from scratch - which made it 
+                        very adap&shy;table.
+                    </p>
+                    <p>
+                        &laquo;We used a clini&shy;cally ap&shy;proved device, which was designed for doing 
+                        focused ultra&shy;sound surgery. We program&shy;med that to create the same sort of 
+                        beams that they did.&raquo;
+                    </p>
+                    <p>
+                        &laquo;[But] because they had their own system, it was more program&shy;&shy;mable. 
+                        That allowed them to change the beams that they were creating in real time.&raquo;
+                    </p>
+                    <p>
+                        &laquo;It is quite dif&shy;ferent from what we did, in that it's moving 
+                        indi&shy;vidual par&shy;ticles around and it's recon&shy;figu&shy;rable. But in 
+                        other ways, the beams it's producing are not mil&shy;lions of miles away from 
+                        what's been done already by others - including us.&raquo;
+                    </p>
+                    <div class="notab">
+                    <h2>Science fact</h2>
+                        <p>
+                            The invi&shy;sible mani&shy;pula&shy;tion of objects cer&shy;tainly sets 
+                            imagi&shy;nations racing. When looking for ways to demon&shy;strate what their 
+                            con&shy;traption could do, Prof Drinkwater and his col&shy;leagues 
+                            under&shy;standably set&shy;tled on a sci-fi analogy.
+                        </p>
+                    </div>
+                    <p>
+                        &laquo;We wanted to demon&shy;strate that we could do it up&shy;side down. We had a 
+                        dis&shy;cussion and we thought that everyone thinks of a trac&shy;tor beam as 
+                        people being sucked up into space.&raquo;
+                    </p>
+                    <p>
+                        &laquo;So we mounted the array upside-down in a card&shy;board UFO, and the 
+                        particle gets sucked up into it.&raquo;
+                    </p>
+                    <p>
+                        The Dundee researchers, before de&shy;ve&shy;loping their own trac&shy;tor beam in 
+                        2014, trod a similar line when they described their ultra&shy;sound device for 
+                        pushing and turning as a &laquo;sonic screwdriver&raquo;.
+                    </p>
+                    <p>
+                        Nobody is more aware than engi&shy;neers, it seems, that their research is 
+                        in&shy;crea&shy;singly blurring our experience of science fiction and fact.
+                    </p>
+                    <address class="author">
+                        By Jonathan Webb<br>Science reporter, BBC News<br>
+                        <time>27 October 2015</time>
+                    </address>
+                </div>
+            </article>
+        </main>
+        <footer class="more">
+            <p>
+                More on this story: <a href="http://www.bbc.com/news/science-environment-29708358">link</a>
+            </p>
+        </footer>
     </body>
 </html>
