--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div lang="en" class="page">
                     <p>
                         En&shy;gi&shy;neers in Bristol have de&shy;ve&shy;loped a system that can grab, hold
-                         and move small objects without touching them, using &laquo;holograms&raquo; made of 
+                        and move small objects without touching them, using &laquo;holograms&raquo; made of 
                         sound waves.
                     </p>
                     <p>
@@ -38,7 +38,7 @@
                     </p>
                     <p>
                         So far the team has tes&shy;ted the design on small pea-sized objects, which they can
-                         ma&shy;ni&shy;pu&shy;late from 30-40cm away.
+                        ma&shy;ni&shy;pu&shy;late from 30-40cm away.
                     </p>
                     <p>
                         Writing in Nature Communications, they sug&shy;gest the work could help 
@@ -58,8 +58,8 @@
                     <p>
                         These &laquo;holograms&raquo; were able to con&shy;trol small beads up to 5mm 
                         across. Crucially, the design works from just one side - in&shy;clu&shy;ding above 
-                        or below the beads - in&shy;stead of re&shy;quiring the object to be sur&shy;rounded by 
-                        loud&shy;speakers.
+                        or below the beads - in&shy;stead of re&shy;quiring the object to be 
+                        sur&shy;rounded by loud&shy;speakers.
                     </p>
                     <div class="notab">
                         <h2>Non-contact manufacturing?</h2>
