--- a/index.html
+++ b/index.html
@@ -4,16 +4,9 @@
         <meta charset="utf-8">
         <title>DeLorean DMC-12</title>
         <link rel="stylesheet" href="index.css">
-        <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet" 
-        type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" 
-        type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" 
-        type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Exo|Bree+Serif|
+        Yanone+Kaffeesatz|Dancing+Script|Kaushan+Script|Lora|Bangers"
+        rel="stylesheet" type="text/css">
     </head>
     <body>
         <!-- Здесь применять вашу самую сильную магию -->
@@ -27,7 +20,7 @@
             <article>
                 <h1>&laquo;Tractor beam&raquo; grabs beads with sound waves</h1>
                 <div lang="en" class="page">
-                    <p>
+                    <p class="nopadding">
                         En&shy;gi&shy;neers in Bristol have de&shy;ve&shy;loped a system that can grab, hold
                         and move small objects without touching them, using &laquo;holograms&raquo; made of 
                         sound waves.
@@ -37,8 +30,8 @@
                         com&shy;pari&shy;son with the &laquo;tractor beams&raquo; of science fiction.
                     </p>
                     <p>
-                        So far the team has tes&shy;ted the design on small pea-sized objects, which they can
-                        ma&shy;ni&shy;pu&shy;late from 30-40cm away.
+                        So far the team has tes&shy;ted the design on small pea-sized objects, which they 
+                        can ma&shy;ni&shy;pu&shy;late from 30-40cm away.
                     </p>
                     <p>
                         Writing in Nature Communications, they sug&shy;gest the work could help 
