Картинка на 2 колонки :D

--- a/index.html
+++ b/index.html
@@ -36,40 +36,49 @@
         <main>
             <article class="page">
                 <h1>&laquo;Tractor beam&raquo; grabs beads with sound waves</h1>
-                <p class="nopadding">
-                    En&shy;gi&shy;neers in Bristol have de&shy;ve&shy;loped a system that can grab, hold
-                    and move small objects without touching them, using &laquo;holograms&raquo; made of 
-                    sound waves.
-                </p>
-                <p>
-                    It offers the kind of re&shy;mote cont&shy;rol that na&shy;tu&shy;rally draws 
-                    com&shy;pari&shy;son with the &laquo;tractor beams&raquo; of science fiction.
-                </p>
-                <p>
-                    So far the team has tes&shy;ted the design on small pea-sized objects, which they 
-                    can ma&shy;ni&shy;pu&shy;late from 30-40cm away.
-                </p>
-                <p>
-                    Writing in Nature Communications, they sug&shy;gest the work could help 
-                    de&shy;ve&shy;lop remote sur&shy;gical instru&shy;ments.
-                </p>
-                <p>
-                    In essence, an object sit&shy;ting in a &laquo;quiet&raquo; region of space can be 
-                    held there if it is sur&shy;rounded by very high-intensity sound waves. As the 
-                    pat&shy;tern of that boun&shy;dary shifts, the object can be moved around.
-                </p>
-                <p>
-                    The researchers prog&shy;ram&shy;med a grid of small spea&shy;kers to emit 
-                    ultra&shy;sound in in&shy;tri&shy;cate, shif&shy;ting pat&shy;terns, craf&shy;ting 
-                    shapes from the in&shy;te&shy;rac&shy;ting waves that resem&shy;bled twee&shy;zers, 
-                    bot&shy;tles, and tiny tornado-like twis&shy;ters.
-                </p>
-                <p>
-                    These &laquo;holograms&raquo; were able to con&shy;trol small beads up to 5mm 
-                    across. Crucially, the design works from just one side - in&shy;clu&shy;ding above 
-                    or below the beads - in&shy;stead of re&shy;quiring the object to be 
-                    sur&shy;rounded by loud&shy;speakers.
-                </p>
+                <div class="first">
+                    <p class="nopadding">
+                        En&shy;gi&shy;neers in Bristol have de&shy;ve&shy;loped a system that can grab, hold
+                        and move small objects without touching them, using &laquo;holograms&raquo; made of 
+                        sound waves.
+                    </p>
+                    <p>
+                        It offers the kind of re&shy;mote cont&shy;rol that na&shy;tu&shy;rally draws 
+                        com&shy;pari&shy;son with the &laquo;tractor beams&raquo; of science fiction.
+                    </p>
+                    <p>
+                        So far the team has tes&shy;ted the design on small pea-sized objects, which they 
+                        can ma&shy;ni&shy;pu&shy;late from 30-40cm away.
+                    </p>
+                    <p>
+                        Writing in Nature Communications, they sug&shy;gest the work could help 
+                        de&shy;ve&shy;lop remote sur&shy;gical instru&shy;ments.
+                    </p>
+                    <p>
+                        In essence, an object sit&shy;ting in a &laquo;quiet&raquo; region of space can be 
+                        held there if it is sur&shy;rounded by very high-intensity sound waves. As the 
+                        pat&shy;tern of that boun&shy;dary shifts, the object can be moved around.
+                    </p>
+                    <figure class="first-img">
+                        <img src="images\photo.jpg" alt="Hologram" title="Invisible 'hologram'">
+                        <figcaption>
+                            A grid of programmable speakers creates invisible "hologram" shapes from 
+                            ultrasound waves
+                        </figcaption>
+                    </figure>
+                    <p>
+                        The researchers prog&shy;ram&shy;med a grid of small spea&shy;kers to emit 
+                        ultra&shy;sound in in&shy;tri&shy;cate, shif&shy;ting pat&shy;terns, craf&shy;ting 
+                        shapes from the in&shy;te&shy;rac&shy;ting waves that resem&shy;bled twee&shy;zers, 
+                        bot&shy;tles, and tiny tornado-like twis&shy;ters.
+                    </p>
+                    <p>
+                        These &laquo;holograms&raquo; were able to con&shy;trol small beads up to 5mm 
+                        across. Crucially, the design works from just one side - in&shy;clu&shy;ding above 
+                        or below the beads - in&shy;stead of re&shy;quiring the object to be 
+                        sur&shy;rounded by loud&shy;speakers.
+                    </p>
+                </div>
                 <div class="notab">
                     <h2>Non-contact manufacturing?</h2>
                     <p>
@@ -84,13 +93,6 @@
                     for hand&shy;ling dan&shy;gerous materials in some sort of non-contact production 
                     line.&raquo;
                 </p>
-                <figure>
-                    <img src="images\photo.jpg" alt="Hologram" title="Invisible 'hologram'">
-                    <figcaption>
-                        A grid of programmable speakers creates invisible "hologram" shapes from 
-                        ultrasound waves
-                    </figcaption>
-                </figure>
                 <p>
                     Similar re&shy;search from the University of Dundee, pub&shy;lished last year, had 
                     already demon&shy;strated that sound waves could tug an object towards a sound 
@@ -112,13 +114,6 @@
                     One of the authors of the 2014 Dundee study, Dr Mike MacDonald, said the work from 
                     Bristol was "a very nice demon&shy;stration" of the power of this tech&shy;nology.
                 </p>
-                <figure>
-                    <img src="images\hand.jpg" alt="Drugs delivery" title="Drugs delivery">
-                    <figcaption>
-                        The Bristol engi&shy;neers say their tech could even&shy;tually help deliver 
-                        drugs in a targeted way.
-                    </figcaption>
-                </figure>
                 <p>
                     The main dif&shy;ference between their work, he ex&shy;plained, was that 
                     the Bristol team had built their own speaker system from scratch - which made it 
@@ -129,6 +124,13 @@
                     focused ultra&shy;sound surgery. We program&shy;med that to create the same sort of 
                     beams that they did.&raquo;
                 </p>
+                <figure>
+                    <img src="images\hand.jpg" alt="Drugs delivery" title="Drugs delivery">
+                    <figcaption>
+                        The Bristol engi&shy;neers say their tech could even&shy;tually help deliver 
+                        drugs in a targeted way.
+                    </figcaption>
+                </figure>
                 <p>
                     &laquo;[But] because they had their own system, it was more program&shy;&shy;mable. 
                     That allowed them to change the beams that they were creating in real time.&raquo;
@@ -140,7 +142,7 @@
                     what's been done already by others - including us.&raquo;
                 </p>
                 <div class="notab">
-                <h2>Science fact</h2>
+                    <h2>Science fact</h2>
                     <p>
                         The invi&shy;sible mani&shy;pula&shy;tion of objects cer&shy;tainly sets 
                         imagi&shy;nations racing. When looking for ways to demon&shy;strate what their 
